# Hs

./: README.md
Ass1/: DG1__DS_DIR_HDR  Tortoise.hs
QueueTree/: Ex04.cabal  Ex04.hs  Priority.hs  README.md  Size.hs  stack.yaml
StateMonad/: Ex05.cabal  Ex05.hs
T.O.R.T.O.I.S.E./: README.md  Tortoise.cabal
