name: Ex04
version: 1.0
cabal-version: >= 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable Ex04
  buildable: True
  main-is: Ex04.hs
  build-depends:
      base -any,
      mtl -any,
      QuickCheck -any
  other-modules:
    Priority,
    Size
