name: Ex05
version: 1.0
cabal-version: >= 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable Ex05
  buildable: True
  main-is: Ex05.hs
  build-depends:
      base -any,
      mtl -any,
      QuickCheck -any
